Fixed bugs in the alignment of navigation

--- a/src/sass/layouts/_navigation.sass
+++ b/src/sass/layouts/_navigation.sass
@@ -1,8 +1,8 @@
 .nav
-    padding: 2rem 0
+    padding: 2rem 1rem
     height: 3rem
     max-width: 123rem
-    margin: 0 1rem
+    margin: 0 auto
 
     &-logo
         float: left
@@ -42,6 +42,7 @@
 
             img
                 width: 50%
+                height: 50%
 
             @include clearfix
 
